--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "algolia/algoliasearch-client-php": "^3.3",
         "barryvdh/laravel-snappy": "^1.0",
         "consoletvs/charts": "6.*",
         "dompdf/dompdf": "^2.0",
